<resources>
    <string name="app_name">AD340Assignment9</string>
    <string name="heading">Shaw, Clinton 5.6.2018</string>
    <string name="submit">Submit</string>
    <string name="enter_name">Enter name…</string>
    <string name="enter_occupation">Enter occupation…</string>
    <string name="enter_email">Enter email…</string>
    <string name="birthday">Enter your birthday…</string>
    <string name="ok">OK</string>
    <string name="go_back">Go Back</string>
    <string name="take_a_picture_with_your_camera">Take a picture with your camera</string>
    <string name="get_image_from_camera_roll">Get image from camera roll…</string>
    <string name="profile_picture">profile picture</string>
    <string name="tell_us_about_yourself">Tell us about yourself…</string>
    <string name="profile_pic2">Profile picture</string>
    <string name="this_is_the_settings_tab">Application Settings</string>
    <string name="card_name_like">You liked %1$s</string>
    <string name="settings">Settings</string>
    <string name="matches">Matches</string>
    <string name="enter_matches_time_reminder">Enter time reminder…</string>
    <string name="set_profile_to_public">Set profile to public:</string>
    <string name="max_distance">Max Distance in miles</string>
    <string name="gender">Gender Preference</string>
    <string name="maximum_age">Maximum Age</string>
    <string name="minimum_age">Minimum Age</string>
    <string name="matches_time_reminder">Matches Time Reminder</string>
    <string name="maximum_age_of_matches">Maximum age of matches</string>
    <string name="minimum_age_of_matches">Minimum age of matches</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="enable_location">Enable Location</string>
    <string name="location_message">Your Locations Settings is set to \'Off\'. Please Enable Location to use this app</string>
    <string name="location_settings">Location Settings</string>
    <string name="location_cancel">Cancel</string>
    <string name="name_goes_here">[NAME GOES HERE]</string>
</resources>
