...
            android:layout_height="wrap_content"
            android:layout_marginStart="240dp"
            android:paddingBottom="10dp"
            android:text="@string/heading" />

        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:inputType="textCapWords"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_below="@+id/header" />

        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:inputType="textWebEmailAddress"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_below="@+id/nameEdit" />

        <EditText
            android:id="@+id/occEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_occupation"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_below="@+id/emailEdit" />

        <EditText
            android:id="@+id/descBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tell_us_about_yourself"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="2000"
            android:maxLines="4"
            android:scrollHorizontally="false"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_below="@+id/occEdit" />

        <Button
            android:id="@+id/birthdayEdit"
            android:background="@drawable/button_selector"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:hint="@string/birthday"
            android:inputType="none"
            android:onClick="onDateClicked"
...
