<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profileTab">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profileImg"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/profile_picture_height"
            android:contentDescription="@string/profile_pic2"
            android:gravity="center"
            android:padding="@dimen/image_pad"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/userAgeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileImg"
            android:padding="15dp"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/userOcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userAgeName"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/userDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userOcc"
            android:paddingBottom="10dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:textSize="16sp" />
    </RelativeLayout>
</ScrollView>